adguard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  labels:
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
        app.kubernetes.io/version: v1
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 3000
              name: setup
              protocol: TCP
          volumeMounts:
            - name: adguard-work
              mountPath: /opt/adguardhome/work
            - name: adguard-conf
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: adguard-work
          persistentVolumeClaim:
            claimName: adguard-work-pvc
        - name: adguard-conf
          persistentVolumeClaim:
            claimName: adguard-conf-pvc
