adguard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
spec:
  selector:
    app: adguard
  type: LoadBalancer
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: setup
      port: 3000
      targetPort: 3000
      protocol: TCP
