adguard/destination-rule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: adguard-service-https
spec:
  host: adguard-service.adguard.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
