adguard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adguard.limtaehyun.dev
      secretName: tls
  rules:
    - host: adguard.limtaehyun.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-service
                port:
                  number: 443
